MonetDB/src/mal/Tests/tst115.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2001, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
## the next step is to trace the call of a mal function call
#
#command + (L:any::1,R:any::1):any::1 = addIntInt; 
!ERROR: address of function addIntInt not found
command Admin.+(L:any::1,R:any::1):any::1 = addIntInt;	#0 polymorphic:(addIntInt:any::1->3)(L:any::1->1)(R:any::1->2)
#
#function doitOnce():int;
#	z:= 12;
#	return z;
#end function;
function Admin.doitOnce():int;	#0:(doitOnce:int->0)
	z := 12;	#1:(z:int->1)($2:int->2)
	return z;	#2:(z:int->1)
end function;	#3:
#
#function doitTwice(i:int):int;
#	j:= 2;
#	k:= 11111;
#	i:= j+k;
#	return i;
#end function;
function Admin.doitTwice(i:int):int;	#0:(doitTwice:int->0)(i:int->1)
	j := 2;	#1:(j:int->2)($3:int->3)
	k := 11111;	#2:(k:int->4)($5:int->5)
	i := Admin.+(j,k);	#3:(i:int->1)(j:int->2)(k:int->4)
	return i;	#4:(i:int->1)
end function;	#5:
#
#
#a:=1;
#b:= doitOnce();
#c:= 2;
#d:= doitTwice(3);
#c:= 3;
#d:= doitTwice("wrong");
#
function Admin.main():int;	#0:(main:int->0)
	a := 1;	#1:(a:int->1)($2:int->2)
	b := Admin.doitOnce();	#2:(b:int->3)
	c := 2;	#3:(c:int->4)($5:int->5)
	d := Admin.doitTwice(3);	#4:(d:int->6)($7:int->7)
	c := 3;	#5:(c:int->4)($7:int->7)
	d := doitTwice("wrong");	#6 unknown:(d:int->6)($8:str->8)
end function;	#7:
!ERROR: MALexception:Admin.main[6]:Instruction type not fixed
>